
========== trunk / YYYY-MM-DD ===================================

Important Notice

* The serious bug fix is included. 

New Features & Improvements

* Add proxy.user and proxy.password properties to build.xml for dictionary download.
  (johtani)

Bug Fixes

* http://code.google.com/p/lucene-gosen/issues/detail?id=19
  Memory usage increases by a specific character string. 
  (johtani)

API Changes

Javadoc Fixes

Others

========== 1.2.0 / 2011-10-31 ===================================

New Features & Improvements

* http://code.google.com/p/lucene-gosen/issues/detail?id=9
  Reduced heap usage and object creation for better performance.
  (rmuir)

* http://code.google.com/p/lucene-gosen/issues/detail?id=16
  Separate compiled dictionary from jar file, and use multiple dictionaries at the same time.
  (johtani)

Bug Fixes

* http://code.google.com/p/lucene-gosen/issues/detail?id=11
  CompositeTokneFilter can throw IndexOutOfBoundsException when rule
  include unknownPOS and unknown word continue.
  unknown word reading and pronunciations is null.
  (johtani)

========== 1.1.0 / 2011-06-12 ===================================

Important Notice

New Features & Improvements

* http://code.google.com/p/lucene-gosen/issues/detail?id=8
  Morphological data is lazy-loaded for better performance. Due to this,
  the part-of-speech tag is no longer put in TypeAttribute by the
  tokenizer, you should always access it with PartOfSpeechAttribute.
  (rmuir)

Bug Fixes

* http://code.google.com/p/lucene-gosen/issues/detail?id=7
  The compiled jar file didn't include resources (such as stopwords and
  stoptags) needed by JapaneseAnalyzer.  (rmuir)

API Changes

Javadoc Fixes

Others

========== 1.0.1 / 2011-05-13 ===================================

Important Notice

New Features & Improvements

Bug Fixes

* http://code.google.com/p/lucene-gosen/issues/detail?id=4
  JapaneseBasicFormFilter can throw NPE when it is used with WordDelimiterFilter.